--- a/homology_modeling/description
+++ b/homology_modeling/description
@@ -4,7 +4,7 @@ model/models: folder for the 16 enzymes in the benchmark with the files needed t
 
 files:
 *.trim: trim version of the enzymes sequence
-*.3mers and *.9mers: fragment files 
+*.3mers and *.9mers: fragment files in run.sh can be generated on Robetta or can be removed from run.sh 
 *.wts: weight files called in th hybridize.xml for modeling
 
 hybridize.xml: protocol for modeling with homology modeling
@@ -20,7 +20,7 @@ model/cst_models: folder for the 16 enzymes in the benchmark with the files need
 
 files:
 *.trim: trim version of the enzymes sequence
-*.3mers and *.9mers: fragment files
+*.3mers and *.9mers: fragment files in run.sh can be generated on Robetta or can be removed from run.sh 
 *.wts: weight files called in th hybridize.xml for modeling
 
 hybridize.xml: protocol for modeling with homology modeling
